[package]
name = "smd"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Guilherme Prokisch <guilherme.prokisch@gmail.com>"]
description = "A minimalistic  Markdown renderer for the terminal with syntax highlighting, emoji support, and image rendering"
license = "MIT"
repository = "https://github.com/guilhermeprokisch/smd"
readme = "README.md"
keywords = ["markdown", "terminal", "renderer", "syntax-highlighting", "emoji"]
categories = ["command-line-utilities", "text-processing"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.1"
markdown = { version = "1.0.0-alpha.20", features = ["json"] }
syntect = { version = "5.2.0", features = [
  "parsing",
  "regex-fancy",
  "default-themes",
  "default-syntaxes",
] }
emojis = "0.6.3"
viuer = "0.7.1"
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
sha2 = "0.10.8"
term_size = "0.3.2"
crossterm = "0.28.1"
image = "0.25.2"
textwrap = "0.16.1"
terminal_size = "0.3.0"
tempfile = "3.12.0"
