[package]
name = "smd"
version = "0.3.1"
edition = "2021"
authors = ["Guilherme Prokisch <guilherme.prokisch@gmail.com>"]
homepage = "https://github.com/guilhermeprokisch/smd"
description = "A minimalistic  Markdown renderer for the terminal with syntax highlighting, emoji support, and image rendering"
license = "MIT"
repository = "https://github.com/guilhermeprokisch/smd"
readme = "README.md"
keywords = ["markdown", "terminal", "renderer", "syntax-highlighting", "emoji"]
categories = ["command-line-utilities", "text-processing"]
include = ["src/**/*", "docs/**/*", "Cargo.toml"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.1"
markdown = { version = "1.0.0-alpha.20", features = ["json"] }
emojis = "0.6.3"
viuer = "0.7.1"
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
sha2 = "0.10.8"
crossterm = "0.28.1"
image = "0.25.2"
tempfile = "3.12.0"
lazy_static = "1.5.0"
include_dir = "0.7.4"
openssl-sys = { version = "0.9", features = ["vendored"] }
toml = "0.8.19"
dirs = "5.0.1"
tree-sitter = "0.23.0"
tree-sitter-highlight = "0.23.0"
inkjet = { version = "0.10.5", features = ["all_languages", "theme"] }
ansi_colours = "1.2.3"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "guilhermeprokisch/homebrew-smd"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
